feat: add login and register endpoint
